# timeedit-tongs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dioxus.toml  Justfile  LICENSE  README.md  TODO.md  build.rs  cliff.toml
.github/workflows/: site.yml
assets/: style.css
media/: Justfile  banner.typ  lib.typ  repo_card.typ
objects_lookuper/: Cargo.toml
objects_lookuper/src/: main.rs
src/: main.rs
types/: Cargo.toml
types/src/: lib.rs
web/: Cargo.toml  Dioxus.toml  Justfile  build.rs
web/assets/: style.css
web/src/: constants.rs  main.rs  search.rs
web/src/pages/: home.rs  ics.rs  mod.rs  obokat.rs  un.rs
