[package]
name = "objects_lookuper"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = { version = "0.6.5", default-features = false }
reqwest = { version = "0.13.1", features = ["blocking", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
wincode = { version = "0.2.5", features = ["derive"] }
types = { path = "../types" }
