[package]
name = "objects_lookuper"
version.workspace = true
edition.workspace = true

[dependencies]
color-eyre = { version = "0.6.5", default-features = false }
reqwest = { version = "0.13.1", features = ["blocking", "json", "query"] }
wincode = { version = "0.2.5" }
types = { path = "../types" }
