[package]
name = "timeedit-tongs"
version.workspace = true
edition.workspace = true

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-sdk = { version = "0.7.0", features = ["time"] }
fuzzy-matcher = { version = "0.3.7", features = ["compact"] }

types = { path = "../types" }
web-sys = { version = "0.3.83", features = ["Clipboard", "Performance"] }
wincode = "0.2.5"

[features]
default = ["web"]
web = ["dioxus/web"]

[build-dependencies]
vergen = { version = "9.0.6", features = ["build"] }
