[package]
name = "timeedit-tongs"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["alloc", "serde", "unstable-locales"] }
chrono-tz = { version = "0.10.4" }
dioxus = { version = "0.7.3", features = ["router"] }
dioxus-sdk = { version = "0.7", features = ["time"] }
futures = "0.3.31"
fuzzy-matcher = { version = "0.3.7", features = ["compact"] }
fxhash = "0.2.1"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"], default-features = false }

types = { path = "../types" }
web-sys = { version = "0.3.83", features = ["Clipboard", "Performance"] }
wincode = "0.2.5"

[features]
default = ["web"]
web = ["dioxus/web"]

[build-dependencies]
vergen = { version = "9.0.6", features = ["build"] }
